--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,16 +1,12 @@
-/* src/main/resources/static/css/styles.css */
+/* styles.css */
 
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
 }
 
 header {
-    background: #333;
-    color: #fff;
-    padding: 1rem;
+    background: #f4f4f4;
+    padding: 1em;
     text-align: center;
 }
 
@@ -21,53 +17,58 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin: 0 1rem;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
+    margin-right: 10px;
 }
 
 main {
-    padding: 1rem;
+    padding: 1em;
 }
 
-footer {
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-    position: absolute;
-    bottom: 0;
+table {
     width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0; /* Adiciona margem superior e inferior */
 }
 
-form {
-    max-width: 600px;
-    margin: 0 auto;
+table, th, td {
+    border: 1px solid #ddd;
 }
 
-form label {
-    display: block;
-    margin: 0.5rem 0;
+th, td {
+    padding: 12px 15px; /* Adiciona espaçamento interno nas células */
+    text-align: center; /* Centraliza o texto nas células */
 }
 
-form input[type="text"],
-form input[type="number"] {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
+th {
+    background-color: #f2f2f2;
 }
 
-form input[type="submit"] {
-    background: #333;
+button.btn-adicionar {
+    display: inline-block;
+    padding: 0.7em 1.2em;
     color: #fff;
+    background-color: #007bff;
     border: none;
-    padding: 0.5rem;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
     cursor: pointer;
 }
 
-form input[type="submit"]:hover {
-    background: #555;
+button.btn-adicionar:hover {
+    background-color: #0056b3;
+}
+
+.botao-voltar {
+    display: inline-block;
+    margin-top: 1em;
+    padding: 0.5em 1em;
+    color: #fff;
+    background-color: #007bff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.botao-voltar:hover {
+    background-color: #0056b3;
 }
