--- a/src/main/resources/templates/adicionar-livro.html
+++ b/src/main/resources/templates/adicionar-livro.html
@@ -4,36 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Livro</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
-        <h1>Adicionar Novo Livro</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Página Inicial</a></li>
-                <li><a href="/livros">Listar Livros</a></li>
-            </ul>
-        </nav>
+        <h1>Adicionar Livro</h1>
     </header>
     <main>
-        <h2>Formulário de Adição de Livro</h2>
-        <form id="form-adicionar-livro">
+        <form id="form-adicionar-livro" action="/livros/adicionar" method="POST">
             <label for="titulo">Título:</label>
-            <input type="text" id="titulo" name="titulo" required><br><br>
+            <input type="text" id="titulo" name="titulo" required>
+            <br>
             <label for="autor">Autor:</label>
-            <input type="text" id="autor" name="autor" required><br><br>
+            <input type="text" id="autor" name="autor" required>
+            <br>
             <label for="anoPublicacao">Ano de Publicação:</label>
-            <input type="number" id="anoPublicacao" name="anoPublicacao" required><br><br>
-            <label for="genero">Gênero:</label>
-            <input type="text" id="genero" name="genero" required><br><br>
-            <input type="submit" value="Adicionar Livro">
+            <input type="number" id="anoPublicacao" name="anoPublicacao" required>
+            <br>
+            <label for="genero">Gênero</label>
+            <input type="text" id="genero" name="genero" required>
+            <br>
+            <button type="submit" class="btn-adicionar">Adicionar Livro</button>
+            <a href="/livros" class="botao-voltar">Voltar</a>
         </form>
     </main>
-    <footer>
-        <p>&copy; 2024 Sistema de Gerenciamento de Livros</p>
-    </footer>
-    <script src="/js/scripts.js"></script>
+
+    <script src="/scripts.js"></script>
 </body>
 </html>
 
