--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de Livros</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,6 @@
     <footer>
         <p>&copy; 2024 Sistema de Gerenciamento de Livros</p>
     </footer>
-    <script src="/js/scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 </html>
